added swagger to redis
